Release v0.1.2
-----------
Unreleased

Additions:
* String literals can have unicode code points.
    - '\uXXXX' for small code points (less than U+FFFF)
    - '\UXXXXXX' for large code points
    - Does not support UTF-16 surrogate pairs
* `iter.next_opt`
* `memory.ptr_add`
* `misc.any_member`

Removals:

Changes:
* `iter.single` can take a `dispose` function, which is called on close of the
    iterator, with the single value yielded.
* `io.write_escaped_str` supports escaping "\\" now.
* In Javascript runtime, made `__read_from_input` not defined right away, so
    it can be overridden depending on the needs of the program.

Bugfixes:
* `json` encoder was wrongly not encoding strings when using `encode` on an `any`.



Release v0.1.1a
-----------
15th May 2023

Additions:

Removals:

Changes:
* Javascript now supports time at the platform layer.
    - Expects import "host.time"

Bugfixes:
* Fixed javascript runtime not compiling due to missing dependency on `core.os`.


Release v0.1.1
-----------
15th May 2023

Additions:
* Ability to have tags on `#foreign` block procedures.
    - This will enable the creation different binding generators, such jsbindgen.
* WASI support for threads at the platform layer.
    - Requires passing '--multi-threaded' CLI flag.
* `#distinct` types can now be made over any type.
    - Used to be only primitives.
* New `logo-new-256.ico` for favicon on website.
* `u8.to_upper` and `u8.to_lower`
* `iter.empty`
* `json.Value->as_array_iter()`, `json.Value->as_map_iter()`
* `onyx pkg new` for creating a project from a template
* `#load_all_recursive` to recursively load all `.onyx` files in a directory.

Removals:

Changes:
* Undefined function imports in `onyx run` no longer cause an immediate error.
    - Instead, an error is produced when the function is called.
* API for time remains the same, but reduced dependencies on external time things,
    like strftime, localtime and mktime.
* Ergnomic improvements to `onyx pkg`.