@@ -109,7 +109,7 @@ use core
         If not, an assertion is thrown and the context's assert handler must
         take care of it.
     """
-    unwrap_ptr :: (o: ?$T) -> &T {
+    unwrap_ptr :: (o: & ?$T) -> &T {
         switch o {
             case .Some => &v do return v;
             case #default {
